force-app/main/default/objects/Achievement_Group_Item__c/Achievement_Group_Item__c.object-meta.xml
<CustomObject>
    <label>Achievement Group Item</label>
    <nameField>
        <displayFormat>AGI{00000000}</displayFormat>
        <label>Achievement Group Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Achievement Group Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>