force-app/main/default/objects/Achievement_Group_Item__c/fields/Achievement__c.field-meta.xml
<CustomField>
    <fullName>Achievement__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Achievement</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Achievement__c.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Group</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Achievement__c</referenceTo>
    <relationshipLabel>Achievement Group Items (Achievement)</relationshipLabel>
    <relationshipName>Achievement_Group_Items1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>