force-app/main/default/objects/Achievement_Group_Item__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>Group</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Achievement__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Group</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Achievement__c</referenceTo>
    <relationshipLabel>Achievement Group Items</relationshipLabel>
    <relationshipName>Achievement_Group_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>